--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-  "name": "great-gatsby",
+  "name": "unbearable-lightness",
   "private": true,
-  "description": "A quick starter with Gatsby, Hasura, Apollo and firebase",
+  "description": "A quick starter with Gatsby",
   "version": "0.1.0",
   "author": "Toshiki Kamei",
   "dependencies": {
-    "@apollo/client": "^3.2.4",
-    "@material-ui/core": "^4.9.9",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^11.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "firebase": "^7.14.0",
     "gatsby": "^2.24.80",
     "gatsby-image": "^2.3.1",
+    "gatsby-plugin-google-gtag": "^3.3.0",
     "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-plugin-typescript": "^3.3.0",
+    "gatsby-plugin-typescript-checker": "^1.1.1",
+    "gatsby-plugin-webfonts": "^2.1.0",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-sharp": "^2.5.18",
     "graphql": "^15.3.0",
-    "isomorphic-fetch": "^3.0.0",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-helmet": "^6.1.1",
+    "@types/styled-components": "^5.1.9",
     "babel-jest": "^26.5.2",
     "babel-preset-gatsby": "^0.5.14",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.3",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "^4.2.4"
   },
   "keywords": [
-    "gatsby",
-    "firebase",
-    "heroku",
-    "apollo"
+    "gatsby"
   ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest",
-    "init-hasura": "open \"https://heroku.com/deploy?template=https://github.com/hasura/graphql-engine-heroku\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Zett-8/great-gatsby"
+    "url": "https://github.com/Zett-8/unbearable-lightness"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
