--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
   "author": "Toshiki Kamei",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.24.80",
-    "gatsby-image": "^2.3.1",
+    "gatsby": "^3.3.1",
+    "gatsby-image": "^3.3.0",
     "gatsby-plugin-google-gtag": "^3.3.0",
-    "gatsby-plugin-manifest": "^2.4.35",
-    "gatsby-plugin-material-ui": "^2.1.6",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.1",
+    "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "gatsby-plugin-webfonts": "^2.1.0",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-sharp": "^2.5.18",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
     "graphql": "^15.3.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.0"
   },
@@ -35,7 +35,7 @@
     "@types/react-helmet": "^6.1.1",
     "@types/styled-components": "^5.1.9",
     "babel-jest": "^26.5.2",
-    "babel-preset-gatsby": "^0.5.14",
+    "babel-preset-gatsby": "^1.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.3",
     "prettier": "^2.1.2",
@@ -52,7 +52,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest"
+    "test": "jest",
+    "upgrade-dependencies": "yarn upgrade-interactive --latest"
   },
   "repository": {
     "type": "git",
