--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "Toshiki Kamei",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^3.3.1",
     "gatsby-image": "^3.3.0",
     "gatsby-plugin-google-gtag": "^3.3.0",
@@ -35,6 +34,7 @@
     "@types/react-helmet": "^6.1.1",
     "@types/styled-components": "^5.1.9",
     "babel-jest": "^26.5.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-gatsby": "^1.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.3",
@@ -46,10 +46,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "start": "gatsby develop",
     "develop": "gatsby develop",
+    "build": "gatsby build",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "jest",
