--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^3.3.1",
     "gatsby-image": "^3.3.0",
     "gatsby-plugin-google-gtag": "^3.3.0",
+    "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-offline": "^4.3.0",
