--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "gatsby develop",
-    "develop": "gatsby develop",
+    "start": "gatsby develop -H 0.0.0.0",
+    "develop": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "serve": "gatsby serve",
