--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": ["./src/**/*",
-    "./src/providers/types/type.d.ts"
-  ],
+  "include": ["./src/**/*", "./src/providers/types/type.d.ts"],
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
