--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-gatsby": "^1.14.0",
     "jest": "^27.2.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.3"
   },
   "keywords": [
