--- a/package.json
+++ b/package.json
@@ -5,40 +5,40 @@
   "version": "0.1.0",
   "author": "Toshiki Kamei",
   "dependencies": {
-    "gatsby": "^4.15.2",
+    "gatsby": "^4.17.2",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^2.15.1",
-    "gatsby-plugin-manifest": "^4.15.1",
-    "gatsby-plugin-offline": "^5.15.1",
-    "gatsby-plugin-react-helmet": "^5.15.0",
-    "gatsby-plugin-sharp": "^4.15.1",
-    "gatsby-plugin-styled-components": "^5.15.0",
-    "gatsby-plugin-typescript": "^4.15.0",
+    "gatsby-plugin-image": "^2.17.0",
+    "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-offline": "^5.17.0",
+    "gatsby-plugin-react-helmet": "^5.17.0",
+    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-plugin-styled-components": "^5.17.0",
+    "gatsby-plugin-typescript": "^4.17.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.15.0",
-    "gatsby-transformer-sharp": "^4.15.1",
+    "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-transformer-sharp": "^4.17.0",
     "graphql": "^16.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@types/node": "^17.0.38",
-    "@types/react": "^18.0.10",
+    "@types/node": "^18.0.1",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
-    "babel-jest": "^28.1.0",
+    "babel-jest": "^28.1.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "babel-preset-gatsby": "^2.15.0",
-    "jest": "^28.1.0",
-    "prettier": "^2.6.2",
-    "ts-jest": "^28.0.3",
-    "typescript": "^4.7.2"
+    "babel-preset-gatsby": "^2.17.0",
+    "jest": "^28.1.2",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "gatsby"
@@ -52,7 +52,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "jest",
-    "upgrade-dependencies": "yarn upgrade-interactive --latest"
+    "upgrade": "yarn upgrade-interactive --latest"
   },
   "repository": {
     "type": "git",
