--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "version": "0.1.0",
   "author": "Toshiki Kamei",
   "dependencies": {
-    "gatsby": "^4.17.2",
+    "gatsby": "^4.18.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^2.17.0",
-    "gatsby-plugin-manifest": "^4.17.0",
-    "gatsby-plugin-offline": "^5.17.0",
-    "gatsby-plugin-react-helmet": "^5.17.0",
-    "gatsby-plugin-sharp": "^4.17.0",
-    "gatsby-plugin-styled-components": "^5.17.0",
-    "gatsby-plugin-typescript": "^4.17.0",
+    "gatsby-plugin-image": "^2.18.0",
+    "gatsby-plugin-manifest": "^4.18.0",
+    "gatsby-plugin-offline": "^5.18.0",
+    "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby-plugin-sharp": "^4.18.0",
+    "gatsby-plugin-styled-components": "^5.18.0",
+    "gatsby-plugin-typescript": "^4.18.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.17.0",
-    "gatsby-transformer-sharp": "^4.17.0",
+    "gatsby-source-filesystem": "^4.18.0",
+    "gatsby-transformer-sharp": "^4.18.0",
     "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,14 +29,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "babel-jest": "^28.1.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "babel-preset-gatsby": "^2.17.0",
+    "babel-preset-gatsby": "^2.18.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "prettier": "^2.7.1",
@@ -55,7 +55,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "jest",
-    "upgrade": "yarn upgrade-interactive --latest"
+    "update": "yarn upgrade-interactive --latest"
   },
   "repository": {
     "type": "git",
