--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
