--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "description": "A quick starter with Gatsby",
   "version": "0.1.0",
-  "author": "Toshiki Kamei",
+  "author": "zett-8",
   "dependencies": {
-    "gatsby": "4.17.2",
+    "gatsby": "4.19.2",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-manifest": "^4.18.0",
@@ -18,7 +18,6 @@
     "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-source-filesystem": "^4.18.0",
     "gatsby-transformer-sharp": "^4.18.0",
-    "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
