--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "jsx": "react",
     "noEmit": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
