--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     "babel-preset-gatsby": "^2.18.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   },
@@ -54,7 +61,9 @@
     "clean": "gatsby clean",
     "build": "gatsby build",
     "test": "jest",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "fmt": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "style": "stylelint **/*.{tsx,jsx,js,ts}",
+    "lint": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" && yarn style",
     "update": "yarn upgrade-interactive --latest"
   },
   "repository": {
