--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "description": "A quick starter with Gatsby",
   "version": "0.1.0",
-  "author": "zett-8",
+  "author": "zett",
   "dependencies": {
     "gatsby": "4.21.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-manifest": "^4.18.0",
     "gatsby-plugin-offline": "^5.18.0",
-    "gatsby-plugin-react-helmet": "^5.18.0",
     "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-plugin-styled-components": "^5.18.0",
     "gatsby-plugin-typescript": "^4.18.0",
@@ -20,7 +19,6 @@
     "gatsby-transformer-sharp": "^4.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -31,7 +29,6 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "babel-jest": "^28.1.2",
